nbproject/private/Default-build.log
make: Circular I2cpoll.o <- I2cpoll.o dependency dropped.
g++ -Wall -std=c++11 -pthread -g -O0 -DDEBUG -I/usr/include/postgresql ./src/I2cpoll.cpp -c -o ./build/I2cpoll.o
g++ -Wall -std=c++11 -pthread -g -O0 -DDEBUG -I/usr/include/postgresql ./src/DbConnection.cpp -c -o ./build/DbConnection.o
./src/DbConnection.cpp: In member function ‘void DbConnection::exeptConnectError(PGconn*)’:
./src/DbConnection.cpp:27:2: error: ‘a’ was not declared in this scope
  a
  ^
./src/DbConnection.cpp:26:6: warning: unused variable ‘a2’ [-Wunused-variable]
  int a2;
      ^
./src/DbConnection.cpp: In member function ‘bool DbConnection::disconnect()’:
./src/DbConnection.cpp:32:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
./src/DbConnection.cpp: In member function ‘bool DbConnection::insertData()’:
./src/DbConnection.cpp:36:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
Makefile:22: recipe for target 'DbConnection.o' failed
make: *** [DbConnection.o] Error 1
